// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`12 Meldekort test no risk no remaining holidays 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har tolv meldekort klare for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Oversikt over meldekort
      </span>
    </p>
    <p />
  </span>
</a>
`;

exports[`Meldekort without next card test 1`] = `
<div
  className="message meldekort"
  data-ga="Dittnav/Varsel"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
       
    </span>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</div>
`;

exports[`basic Meldekort test 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har to meldekort klare for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Oversikt over meldekort
      </span>
    </p>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</a>
`;

exports[`basic Meldekort test with no meldekort 1`] = `null`;

exports[`basic one Meldekort test 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har ett meldekort for uke week 42 (7/17/2018 - 7/17/2018) klart for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</a>
`;

exports[`basic one Meldekort test no risk 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har ett meldekort for uke week 42 (7/17/2018 - 7/17/2018) klart for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</a>
`;

exports[`basic one Meldekort test no risk no remaining holidays 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har ett meldekort for uke week 42 (7/17/2018 - 7/17/2018) klart for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p />
  </span>
</a>
`;

exports[`basic zero Meldekort test 1`] = `
<div
  className="message meldekort"
  data-ga="Dittnav/Varsel"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</div>
`;

exports[`more than 13 Meldekort test no risk no remaining holidays 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
      <span>
        Du har 13 meldekort klare for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Oversikt over meldekort
      </span>
    </p>
    <p />
  </span>
</a>
`;

exports[`nesteInnsendingAvMeldekort is null 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="http://localhost:9222/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        Du har ett meldekort for uke week 42 (7/17/2018 - 7/17/2018) klart for innsending
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</a>
`;

exports[`no cards no risk 1`] = `
<div
  className="message meldekort"
  data-ga="Dittnav/Varsel"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
      <span>
        Neste meldekort kan sendes fra 11/10/2018
      </span>
       
    </span>
    <span>
       
    </span>
    <p>
      <span>
        Du har gjenstående 12 feriedager ved dagpenger.
      </span>
    </p>
  </span>
</div>
`;
